# gpu-programming

lab7/hdr-pipeline-task3/: CMakeLists.txt
lab7/hdr-pipeline-task3/src/: CMakeLists.txt  bloom_kernel.cuh  envmap.cpp  envmap.h  hdr_pipeline.cpp  hdr_pipeline.cu  hdr_pipeline.h  main.cpp
lab7/hdr-pipeline-task3/src/tools/: CMakeLists.txt
lab7/hdr-pipeline-task3/src/tools/imgdiff/: CMakeLists.txt  main.cpp
lab7/hdr-pipeline-task3/src/utils/: CMakeLists.txt  argparse.cpp  argparse.h  image.h  io.h
lab7/hdr-pipeline-task3/src/utils/cuda/: CMakeLists.txt  array.h  device.cpp  device.h  error.cpp  error.h  event.h  memory.h
lab7/hdr-pipeline-task3/src/utils/io/: image_io.h  obj.cpp  obj.h  obj_reader.h  obj_stream.h  pfm.cpp  pfm.h  png.cpp  png.h  radiance.cpp  radiance.h
